k8s/overlays/prod/patches/backend-ha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-backend
spec:
  replicas: 2
  template:
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: url-shortener-backend
      containers:
        - name: backend
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
